--- a/mara/src/App.css
+++ b/mara/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+button{
+  background-color: black;
+  color: white;
+  width: 20vw;
+  height: 8%;
+  border-radius: 40px;
+  align-self: center;
+  margin-top: 10%;
+}
+
+input{
+  border-radius: 10px;
+  height: 10%;
+  width: 90%;
+  border-style: solid;
+  border-width:1px;
+  padding-left: 20px;
+  font-size: 20pt;
+}
