--- a/mara/src/assets/css/select_tag.module.css
+++ b/mara/src/assets/css/select_tag.module.css
@@ -42,3 +42,20 @@ tag{
     flex-direction: row;
     justify-content: space-between;
 }
+
+.tag_sel{
+    background-color: black;
+    color: white;
+}
+
+.hidden_btn{
+    background-color: rgb(188, 188, 188);
+    color: white;
+    width: 20vw;
+    height: 8%;
+    border-color: rgb(188, 188, 188);
+    border-radius: 40px;
+    align-self: center;
+    margin-top: 10%;
+    font-size: '20px'
+}
