--- a/mara/src/assets/css/sign_up.module.css
+++ b/mara/src/assets/css/sign_up.module.css
@@ -5,11 +5,41 @@
     justify-content: center;
     font-size: 30px;
     height: 80vh;
-    width: 40vw;
+    width: 55vw;
+    margin-left: 11.25%;
 }
 
 
 imfor{
     align-self: flex-start;
     margin-left: 5px;
+}
+
+.check{
+    background-color: rgb(220, 218, 218);
+    color: black;
+    border-color: rgb(220, 218, 218);
+    border-radius: 10px;
+    width: 15%;
+    height: 100%;
+    margin-top: 0px;
+}
+.sign{
+    width: 75%;
+    height: 100%;
+}
+
+.checkbox{
+    height: 10%;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.password{
+    width: 67.5%;
+}
+
+.sign_btn{
+    margin-right: 23%;
 }
