--- a/mara/src/assets/css/start.module.css
+++ b/mara/src/assets/css/start.module.css
@@ -12,6 +12,7 @@
     color: white;
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .img_start > img{
@@ -19,15 +20,17 @@
     opacity: 0.7;
     filter: brightness(70%);
     object-fit: cover;
-
+    width: 100vw;
+    height: 100vh;
+    border: 0;
 }
 
 .btn{
     position: absolute;
-    top: 70%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+    margin-top: 0px;
 }
 
 .ment{
