--- a/mara/src/App.css
+++ b/mara/src/App.css
@@ -41,10 +41,10 @@ button{
   background-color: black;
   color: white;
   width: 20vw;
-  height: 8%;
+  height: 4vw;
   border-radius: 40px;
   align-self: center;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 input{
