--- a/mara/src/assets/css/select_me.module.css
+++ b/mara/src/assets/css/select_me.module.css
@@ -13,16 +13,41 @@ image{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 70%;
+    height: 80%;
     overflow: auto;
+    z-index: 0;
 }
 
-.me{
+
+
+.cock{
+    position: relative;
     display: flex;
     height: 12vw;
     width: 12vw;
     border-radius: 30px;
     border: 1px solid;
     border-color: #ECECEC;
+}
+
+.hidden{
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.me_hover{
+    filter: brightness(50%);
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.me{
+    width: 100%;
+    height: 100%;
 }
 
 .me_sel{
@@ -33,6 +58,19 @@ image{
     border-radius: 30px;
     border: 5px solid;
     border-color: black;
+    position: relative;
+}
+
+.name{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px;
+    font-weight:bold;
+    filter: none;
+    z-index: 5;
 }
 
 #square{
@@ -65,6 +103,7 @@ image{
     border-color: rgb(188, 188, 188);
     border-radius: 40px;
     align-self: center;
-    margin-top: 10%;
+    margin-top: 5%;
     font-size: '20px'
 }
+
