--- a/mara/src/assets/css/select_tag.module.css
+++ b/mara/src/assets/css/select_tag.module.css
@@ -52,10 +52,14 @@ tag{
     background-color: rgb(188, 188, 188);
     color: white;
     width: 20vw;
-    height: 8%;
+    height: 4vw;
     border-color: rgb(188, 188, 188);
     border-radius: 40px;
     align-self: center;
     margin-top: 5%;
-    font-size: '20px'
+    font-size: '20px';
+}
+
+.font{
+    font-size: 20px;
 }
