--- a/mara/src/assets/css/start.module.css
+++ b/mara/src/assets/css/start.module.css
@@ -3,6 +3,10 @@
     width: 100vw;
     height: 100vh;
     border-radius: 0%;
+    filter: brightness(70%);
+    opacity: 0.7;
+    z-index: -1;
+    border: 0px;
 }
 
 .login{
@@ -15,14 +19,16 @@
     cursor: pointer;
 }
 
-.img_start > img{
-    z-index: -1;
-    opacity: 0.7;
-    filter: brightness(70%);
-    object-fit: cover;
+
+.img_hover{
+    filter: brightness(35%);
+    position: relative;
     width: 100vw;
     height: 100vh;
-    border: 0;
+    border-radius: 0%;
+    opacity: 0.8;
+    z-index: -1;
+    border: 0px;
 }
 
 .btn{
@@ -33,11 +39,25 @@
     margin-top: 0px;
 }
 
-.ment{
+.ment_hidden{
     position: absolute;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 20px;
+    font-weight: bold;
+    z-index: 1;
+    opacity: 0;
+}
+
+.ment_hover{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: bold;
+    z-index: 1;
 }
